inserindo media queries

--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+
+        @media(max-width: 1000px) {
+            div{
+                width: 80%;
+                height: 50vh;
+                margin: auto;
+                overflow: hidden;
+                background-image: url("assets/img/sol.gif");
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        }
     </style>
 </head>
 <body>
